fixed new steam book spacing

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -136,7 +136,7 @@ p {
     width:70%;
     margin-left:15%;
     margin-right:15%;
-    margin-top:13.5%;
+    margin-top:15%;
     position:relative;
 }
 #steam-book {
